# system_logger

./: CMakeLists.txt  README.md
cmake/: system_logger-config.cmake
example/: .main.cpp.swp  CMakeLists.txt  main.cpp
include/system_logger/: Allocator.h  AtomicLock.h  BasicLogger.h  Logger.h  LoggingSession.h  Semaphore.h  StringRingBuffer.h
src/: CMakeLists.txt  LoggingSession.cpp  Semaphore.cpp
test/: CMakeLists.txt
test/allocator/: .AllocatorTest.cpp.swp  AllocatorTest.cpp  CMakeLists.txt  main.cpp
test/string_ringbuffer/: CMakeLists.txt  main.cpp
